--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link href="./src/assets/css/nucleo-icons.css" rel="stylesheet" />
     <link href="./src/assets/css/nucleo-svg.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
